--- a/pom.xml
+++ b/pom.xml
@@ -250,7 +250,8 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.19.1</version>
 		<configuration>
-                    <forkCount>3</forkCount>
+	            <parallel>all</parallel>
+                    <forkCount>3C</forkCount>
 		    <reuseForks>true</reuseForks>
                     <argLine>${argLine}</argLine>
                     <excludes>
